US-1405 ensure docPanel contents (including notes) stay beneath the header using a z-index

--- a/documents/docViewer.css
+++ b/documents/docViewer.css
@@ -15,6 +15,10 @@
     width: 900px;
 }
 
+.docViewerHeader {
+    z-index: 10;
+}
+
 .affix + .docPanelContainer {
     padding-top: 120px;
 }
